# pyquotex

./: .gitignore  README.md  app.py  pyproject.toml
examples/: custom_config.py
quotexapi/: api.py  config.py  constants.py  stable_api.py
quotexapi/http/: automail.py  login.py  qxbroker.py
quotexapi/utils/: playwright_install.py
quotexapi/ws/: client.py
quotexapi/ws/channels/: base.py  buy.py  pending_create.py  ssid.py
quotexapi/ws/objects/: profile.py
