[tool.poetry]
name = "quotexapi"
version = "0.1.0"
description = "Unofficial Quotex SDK"
authors = ["A. Stewart <git@alexstewartja.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^24.2.0"
beautifulsoup4 = "^4.12.3"
certifi = "^2024.8.30"
charset-normalizer = "^3.2.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
idna = "^3.7"
outcome = "^1.3.0.post0"
pyee = "^12.0.0"
pyfiglet = "^1.0.2"
PySocks = "^1.7.1"
requests = "^2.31.0"
setuptools = "^74.1.2"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
soupsieve = "^2.4.1"
typing_extensions = "^4.10.0"
urllib3 = "^2.0.7"
websocket-client = {git = "https://github.com/alexstewartja/websocket-client.git"}
wsproto = "^1.2.0"
seleniumbase = "^4.30.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
